Update README.md with instructions